[package]
name = "dames_italianes"
version = "0.1.0"
edition = "2021"
description = "Italian Checkers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.8"

[profile.release]
# opt-level = "z" # both z and s hurt wasm size
codegen-units = 1
